--- a/PlayMusic ViewModel/PlayMusic ViewModel.csproj
+++ b/PlayMusic ViewModel/PlayMusic ViewModel.csproj
@@ -1,17 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>PlayMusic_View</RootNamespace>
+    <RootNamespace>PlayMusic_ViewModel</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Views\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="Infrastructure\" />
-    <Folder Include="Util\" />
   </ItemGroup>
 
 </Project>
